--- a/slides/lecture2.qmd
+++ b/slides/lecture2.qmd
@@ -114,11 +114,9 @@ integral
 . . .
 
 The numerical value of the integral
-
 $$
 \int_0^1 \sin(x) \mathrm{d}x
 $$
-
 is helpfully printed---including an indication of the numerical error.
 
 ## Return Values
@@ -133,7 +131,7 @@ str(integral)
 
 ### What is the Point of This Class Label?
 
-It allows us to write functions (methods) that behave differently based on the
+It allows us to write functions that act based on the
 class of the argument.
 
 . . .
@@ -173,8 +171,14 @@ in the namespace of the **stats** package, and to access it directly we use
 `hist()` also returns an object (of class `histogram`), which has methods
 defined.
 
-```{r temp-hist}
+```{r temp-hist-src}
+#| eval: false
 phi_hist <- hist(phipsi$phi, main = NULL)
+```
+
+```{r temp-hist-plot}
+#| ref-label: temp-hist-src
+#| echo: false
 ```
 
 . . .
@@ -358,6 +362,10 @@ count_zeros(count_data) # Invokes count_zeros.count_object()
 
 Let $f_0$ denote the unknown density we want to estimate.
 
+\medskip
+
+. . .
+
 If we fit a parameterized statistical model $(f_\theta)_\theta$ to data using
 the estimator $\hat{\theta}$, then $f_{\hat{\theta}}$ is an estimate of $f_0$.
 
@@ -371,7 +379,11 @@ The histogram is a nonparametric density estimator, $\hat{f}$.
 
 \medskip
 
-We are interested in nonparametric estimators because
+. . .
+
+### Why are we interested in nonparametric estimators?
+
+Because
 
 . . .
 
@@ -382,7 +394,6 @@ We are interested in nonparametric estimators because
 ## Density Estimation
 
 Density estimation relies on the approximation
-
 $$
 P(X \in (x-h, x+h)) = \int_{x-h}^{x+h} f_0(z) \ dz \simeq f_0(x) 2h.
 $$
@@ -402,7 +413,6 @@ $$
 ## Kernels
 
 We will consider _kernel estimators_
-
 $$
 \hat{f}_h(x) = \frac{1}{hn} \sum_{i=1}^n K\left(\frac{x - x_i}{h}\right).
 $$
@@ -410,7 +420,6 @@ $$
 . . .
 
 The _uniform_ or _rectangular kernel_ is
-
 $$
 K(x) = \frac{1}{2} 1_{(-1,1)}(x),
 $$
@@ -419,8 +428,9 @@ which leads to the expression on the last slide.
 
 . . .
 
-The _Gaussian kernel_ is
+\medskip
 
+The _Gaussian kernel_ is
 $$
 K(x) = \frac{1}{\sqrt{2\pi}} e^{-\frac{x^2}{2}}.
 $$
@@ -483,7 +493,6 @@ p4 <- p3 +
 ::: {.column width="47%"}
 
 Let's say we have a data set
-
 $$
 \boldsymbol{x} = (-1, 3, 5, 6, 9).
 $$
@@ -492,7 +501,10 @@ $$
 
 ::: {.column width="47%"}
 
-```{r, echo = FALSE, fig.width = 5, fig.asp = 1}
+```{r}
+#| echo: false
+#| fig-width: 3
+#| fig-height: 2.5
 p2
 ```
 
@@ -506,13 +518,24 @@ p2
 
 ::: {.column width="47%"}
 
-We add a Gaussian density kernel with bandwidth 1 for each point.
+
+Let's say we have a data set
+$$
+\boldsymbol{x} = (-1, 3, 5, 6, 9).
+$$
+
+\smallskip
+
+Now we add a Gaussian density kernel with bandwidth 1 for each point.
 
 :::
 
 ::: {.column width="47%"}
 
-```{r, echo = FALSE, fig.width = 5, fig.asp = 1}
+```{r}
+#| echo: false
+#| fig-width: 3
+#| fig-height: 2.5
 p3
 ```
 
@@ -526,13 +549,27 @@ p3
 
 ::: {.column width="47%"}
 
-Finally, we average the kernels.
+Let's say we have a data set
+$$
+\boldsymbol{x} = (-1, 3, 5, 6, 9).
+$$
+
+\smallskip
+
+Now we add a Gaussian density kernel with bandwidth 1 for each point.
+
+\bigskip
+
+Finally, we average the kernels to get the density estimate.
 
 :::
 
 ::: {.column width="47%"}
 
-```{r, echo = FALSE, fig.width = 5, fig.asp = 1}
+```{r}
+#| echo: false
+#| fig-width: 3
+#| fig-height: 2.5
 p4
 ```
 
@@ -542,9 +579,19 @@ p4
 
 ## Angle Data
 
-```{r, fig.asp = 0.8}
-hist(phipsi$psi, prob = TRUE, xlab = expression(psi), main = NULL)
-rug(phipsi$psi)
+Recall the angle data between planes in amino acids.
+
+\smallskip
+
+```{r}
+#| fig-width: 5
+#| fig-height: 3
+#| fig-cap: Histogram of the $\Psi$ angle in the amino acid data.
+#| echo: false
+ggplot(phipsi, aes(psi)) +
+  geom_histogram() +
+  geom_rug() +
+  labs(x = expression(psi), y = "Density")
 ```
 
 ## A First Test
@@ -602,6 +649,8 @@ plot(
 ## Testing with **testthat**
 
 ```{r, fig.width = 7, fig.asp = 0.7, error = TRUE}
+#| fig-width: 7
+#| fig-asp: 0.7
 library(testthat)
 
 test_that("Our density implementation corresponds to density()", {
